Updated and commented the CMakeLists for future and current understanding

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 # Add source to this project's executable.
-add_executable(vulkan_guide
+add_executable(run_engine
     main.cpp
     vk_engine.cpp
     vk_engine.h
@@ -12,12 +12,13 @@ add_executable(vulkan_guide
     vk_mesh.h
     vk_mesh.cpp)
 
+# Sets the Visual Studio debugger directory
+set_property(TARGET run_engine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:run_engine>")
 
-set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
-
-target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-target_link_libraries(vulkan_guide vkbootstrap vma glm tinyobjloader imgui stb_image)
-
-target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2)
-
-add_dependencies(vulkan_guide Shaders)
+target_include_directories(run_engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+# Links all of the 3rd party libraries
+target_link_libraries(run_engine vkbootstrap vma glm tinyobjloader imgui stb_image)
+# Links sdl and Vulkan libraries
+target_link_libraries(run_engine Vulkan::Vulkan sdl2)
+# Ensures Shaders are built before run_engine is
+add_dependencies(run_engine Shaders)
