Added base functionality for textures
- Updated shaders, added a texture-compatible fragment shader.
- Textures are loaded in, a pipeline is created for rendering with textures
- After textures are loaded in, they are sent to the shaders (to the GPU) via
	a sampler in a descriptor set

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,9 @@ add_executable(run_engine
     vk_pipeline.cpp
     vk_pipeline.h
     vk_mesh.h
-    vk_mesh.cpp)
+    vk_mesh.cpp
+    vk_texture.h
+    vk_texture.cpp)
 
 # Sets the Visual Studio debugger directory
 set_property(TARGET run_engine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:run_engine>")
